--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fideloper/proxy",
+    "name": "macromindonline/laravel-proxy",
     "description": "Set trusted proxies for Laravel",
     "keywords": ["proxy", "trusted proxy", "load balancing"],
     "license": "MIT",
